Closed Bug 1181533 Opened 9 years ago Closed 9 years ago

Windows build bustage in toolkit/components/downloads/nsDownloadManager.cpp with --disable-safe-browsing set

Categories

(Toolkit :: Downloads API, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: RyanVM, Assigned: RyanVM)

References

Details

Attachments

(1 file, 1 obsolete file)

I have --disable-parental-controls set in my .mozconfig. With bug 905127, I'm now seeing the below bustage:

toolkit/components/downloads/nsDownloadManager.cpp(84)   : error C2065: 'PR_USEC_PER_MSEC' : undeclared identifier
toolkit/components/downloads/nsDownloadManager.cpp(1581) : error C3861: 'PR_Now': identifier not found
toolkit/components/downloads/nsDownloadManager.cpp(1840) : error C3861: 'PR_Now': identifier not found
toolkit/components/downloads/nsDownloadManager.cpp(2489) : error C2660: 'nsIDownloadManagerUI::Show' : function does not take 3 arguments
toolkit/components/downloads/nsDownloadManager.cpp(2489) : error C3861: 'NS_strcmp': identifier not found
toolkit/components/downloads/nsDownloadManager.cpp(2605) : error C3861: 'PR_Now': identifier not found
toolkit/components/downloads/nsDownloadManager.cpp(2724) : error C2065: 'PR_USEC_PER_MSEC' : undeclared identifier
toolkit/components/downloads/nsDownloadManager.cpp(2725) : error C3861: 'PR_Now': identifier not found
toolkit/components/downloads/nsDownloadManager.cpp(2960) : error C3861: 'PR_Now': identifier not found
toolkit/components/downloads/nsDownloadManager.cpp(2969) : error C2065: 'PR_USEC_PER_SEC' : undeclared identifier
toolkit/components/downloads/nsDownloadManager.cpp(3097) : error C3861: 'PR_Now': identifier not found

I've verified that commenting out the disable allows it to build successfully again.
Flags: needinfo?(dd.mozilla)
Gah, that should have been --disable-safe-browsing. I wonder if this is a unified build issue.
Summary: Windows build bustage in toolkit/components/downloads/nsDownloadManager.cpp with parental controls disabled → Windows build bustage in toolkit/components/downloads/nsDownloadManager.cpp with --disable-safe-browsing set
Changing the moz.build entry for nsDownloadManager.cpp from UNIFIED_SOURCES to SOURCES didn't work.
When bug 905127 landed, it added the prtime.h include to nsDownloadScanner.cpp but not nsDownloadManager.cpp. I'm guessing it got missed due to some random unified build combo that is getting tickled by my disabling of safe browsing locally.

With that, I'm down to only 2 errors:
toolkit/components/downloads/nsDownloadManager.cpp(2489) : error C2660: 'nsIDownloadManagerUI::Show' : function does not take 3 arguments
toolkit/components/downloads/nsDownloadManager.cpp(2489) : error C3861: 'NS_strcmp': identifier not found
Flags: needinfo?(dd.mozilla)
Component: Networking → Download Manager
Product: Core → Toolkit
Version: unspecified → Trunk
And nsCRTGlue.h takes care of those!
Assignee: nobody → ryanvm
Attachment #8631073 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #8631081 - Flags: review?(nfroyd)
Attachment #8631081 - Flags: review?(nfroyd) → review+
https://hg.mozilla.org/mozilla-central/rev/d94ec89a241f
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: